--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,27 @@
     <fragment
         android:id="@+id/destination_home"
         android:name="com.abhishek.umbrella.view.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/layout_home" />
+        android:label="Home"
+        tools:layout="@layout/layout_home">
+
+        <action
+            android:id="@+id/action_home_to_forecast"
+            app:destination="@id/destination_forecast"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/destination_forecast"
+        android:name="com.abhishek.umbrella.view.ForecastFragment"
+        android:label="Forecast"
+        tools:layout="@layout/layout_weekly_forecast">
+
+        <argument
+            android:name="city"
+            app:argType="string" />
+    </fragment>
 
 </navigation>
